--- a/src/components/Task/index.module.css
+++ b/src/components/Task/index.module.css
@@ -1,98 +1,95 @@
 .li_task {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .task {
-	display: flex;
-	position: relative;
-	height: 59px;
-	border-bottom: 1px solid #ededed;
+  display: flex;
+  position: relative;
+  height: 59px;
+  border-bottom: 1px solid #ededed;
 }
 .label_span {
-	display: flex;
-	justify-content: space-between;
-	padding: 15px 85px 15px 60px;
-	width: 100%;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 85px 15px 60px;
+  width: 100%;
+  align-items: center;
 }
 .description {
-	color: #4d4d4d;
-	font-size: 24px;
+  color: #4d4d4d;
+  font-size: 24px;
 }
 .created {
-	color: #808080;
-	font-size: 13px;
+  color: #808080;
+  font-size: 13px;
 }
 
 .input_edit {
-	display: none;
+  display: none;
 }
 
 .toggle {
-	text-align: center;
-	width: 40px;
-	/* auto, since non-WebKit browsers doesn't support input styling */
-	height: 40px;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto 0;
-	border: none; /* Mobile Safari */
-	-webkit-appearance: none;
-	appearance: none;
-	cursor: pointer;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  border: none;
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
 }
 .toggle {
-	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
-	background-repeat: no-repeat;
-	background-position: center left;
+  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+  background-repeat: no-repeat;
+  background-position: center left;
 }
 .toggle:checked {
-	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
 .icon {
-	position: absolute;
-	bottom: -3px;
-	width: 30px;
-	height: 40px;
-	font-size: 34px;
-	color: #cc9a9a;
-	margin: auto 0 11px;
-	transition: color 0.2s ease-out;
-	cursor: pointer;
+  position: absolute;
+  bottom: -3px;
+  width: 30px;
+  height: 40px;
+  font-size: 34px;
+  color: #cc9a9a;
+  margin: auto 0 11px;
+  transition: color 0.2s ease-out;
+  cursor: pointer;
 }
 
 .icon:hover {
-	color: #af5b5e;
+  color: #af5b5e;
 }
-.icon_edit{
-	display: flex;              
-  align-items: center;        /* Центрирование по оси Y */
+.icon_edit {
+  display: flex;
+  align-items: center;
 }
 
 .icon_destroy {
-	right: 10px;
+  right: 10px;
 }
 .icon_destroy::after {
-	content: '×';
+  content: '×';
 }
 .icon_edit {
-	right: 45px;
+  right: 45px;
 }
 .icon_edit::after {
-	content: '✎';
-	font-size: 20px;
+  content: '✎';
+  font-size: 20px;
 }
 .active {
-	text-decoration: none;
-
+  text-decoration: none;
 }
 .completed {
-	text-decoration: line-through;
-	opacity: 0.5;	
-	transition: 0.4s;
+  text-decoration: line-through;
+  opacity: 0.5;
+  transition: 0.4s;
 }
-
