--- a/src/components/Task/index.module.css
+++ b/src/components/Task/index.module.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  position: relative;
 }
 
 .task {
@@ -27,6 +28,26 @@
 }
 
 .input_edit {
+  position: absolute;
+  transition: color 0.4s;
+  font-weight: 400;
+  font-size: 22px;
+  color: #000000;
+  padding: 12px 16px;
+  width: 100%;
+  max-width: 470px;
+  height: 33px;
+  top: 0;
+  right: 0;
+  border: 1px solid #999;
+  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+  
+}
+
+.input_edit_active {
+  display: block;
+}
+.input_edit_inactive {
   display: none;
 }
 
@@ -50,6 +71,13 @@
 }
 .toggle:checked {
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+}
+
+.isClickEditChangeToggleActive{
+  display: block;
+}
+.isClickEditChangeToggleInactive{
+  display: none;
 }
 
 .icon {
