--- a/src/components/NewTaskForm/index.module.css
+++ b/src/components/NewTaskForm/index.module.css
@@ -1,35 +1,58 @@
+.new_task_form {
+    display: flex;
+}
+
+.new_task_form input:first-child {
+    flex: 0 1 auto;
+}
+
 .new_task_form input::-webkit-input-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0, 0, 0, 0.4);
+    font-style: italic;
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .new_task_form input::-moz-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: rgba(0, 0, 0, 0.4);
+    font-style: italic;
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .new_todo {
-  position: relative;
-  margin: 0;
-  width: 100%;
-  font-size: 24px;
-  font-family: inherit;
-  font-weight: inherit;
-  line-height: 1.4em;
-  color: inherit;
-  padding: 6px;
-  border: 1px solid #999;
-  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    position: relative;
+    margin: 0;
+    width: 100%;
+    font-size: 24px;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: 1.4em;
+    color: inherit;
+    padding: 6px;
+    border: 1px solid #999;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .new_todo {
-  padding: 16px 16px 16px 60px;
-  border: none;
-  background: rgba(0, 0, 0, 0.003);
-  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+    padding: 16px 16px 16px 60px;
+    border: none;
+    background: rgba(0, 0, 0, 0.003);
+    box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+}
+
+.new_todo_timer_min {
+    flex: 0 2 auto;
+    padding: 16px;
+}
+
+.new_todo_timer_sec {
+    flex: 0 2 auto;
+    padding: 16px;
+}
+
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
