--- a/src/components/Task/index.module.css
+++ b/src/components/Task/index.module.css
@@ -1,122 +1,175 @@
 .li_task {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: relative;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: relative;
 }
 
 .task {
-  display: flex;
-  position: relative;
-  height: 59px;
-  border-bottom: 1px solid #ededed;
+    display: flex;
+    position: relative;
+    height: 59px;
+    border-bottom: 1px solid #ededed;
 }
+
 .label_span {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 85px 15px 60px;
-  width: 100%;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 85px 15px 60px;
+    width: 100%;
+    align-items: center;
 }
+
 .description {
-  color: #4d4d4d;
-  font-size: 24px;
+    color: #4d4d4d;
+    font-size: 24px;
 }
+
 .created {
-  color: #808080;
-  font-size: 13px;
+    color: #808080;
+    font-size: 13px;
 }
 
 .input_edit {
-  position: absolute;
-  transition: color 0.4s;
-  font-weight: 400;
-  font-size: 22px;
-  color: #000000;
-  padding: 12px 16px;
-  width: 100%;
-  max-width: 470px;
-  height: 33px;
-  top: 0;
-  right: 0;
-  border: 1px solid #999;
-  box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    position: absolute;
+    transition: color 0.4s;
+    font-weight: 400;
+    font-size: 22px;
+    color: #000000;
+    padding: 12px 16px;
+    width: 100%;
+    max-width: 470px;
+    height: 33px;
+    top: 0;
+    right: 0;
+    border: 1px solid #999;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .input_edit_active {
-  display: block;
+    display: block;
 }
+
 .input_edit_inactive {
-  display: none;
+    display: none;
 }
 
 .toggle {
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto 0;
-  border: none;
-  -webkit-appearance: none;
-  appearance: none;
-  cursor: pointer;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    border: none;
+    -webkit-appearance: none;
+    appearance: none;
+    cursor: pointer;
 }
+
 .toggle {
-  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
-  background-repeat: no-repeat;
-  background-position: center left;
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
+    background-repeat: no-repeat;
+    background-position: center left;
 }
+
 .toggle:checked {
-  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
 .isClickEditChangeToggleActive {
-  display: block;
+    display: block;
 }
+
 .isClickEditChangeToggleInactive {
-  display: none;
+    display: none;
 }
 
 .icon {
-  position: absolute;
-  bottom: -3px;
-  width: 30px;
-  height: 40px;
-  font-size: 34px;
-  color: #cc9a9a;
-  margin: auto 0 11px;
-  transition: color 0.2s ease-out;
-  cursor: pointer;
+    position: absolute;
+    bottom: -3px;
+    width: 30px;
+    height: 40px;
+    font-size: 34px;
+    color: #cc9a9a;
+    margin: auto 0 11px;
+    transition: color 0.2s ease-out;
+    cursor: pointer;
 }
 
 .icon:hover {
-  color: #af5b5e;
+    color: #af5b5e;
 }
+
 .icon_edit {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .icon_destroy {
-  right: 10px;
+    right: 10px;
 }
+
 .icon_destroy::after {
-  content: '×';
+    content: '×';
 }
+
 .icon_edit {
-  right: 45px;
+    right: 45px;
 }
+
 .icon_edit::after {
-  content: '✎';
-  font-size: 20px;
+    content: '✎';
+    font-size: 20px;
 }
+
 .active {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .completed {
-  text-decoration: line-through;
-  opacity: 0.5;
-  transition: 0.4s;
+    text-decoration: line-through;
+    opacity: 0.5;
+    transition: 0.4s;
+}
+
+.container_btn_timer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.btn_timer_play {
+    width: 12px;
+    height: 16px;
+    margin-right: 8px;
+    padding: 0;
+}
+
+.btn_timer_pause {
+    width: 20px;
+    height: 16px;
+    padding: 0;
+    margin-bottom: 5px;
+    margin-right: 10px;
+}
+
+.btn_timer_play:after {
+    content: '▶';
+    cursor: pointer;
+}
+
+.btn_timer_play:hover:after {
+    filter: brightness(0) saturate(100%) invert(41%) sepia(73%) saturate(353%) hue-rotate(310deg) brightness(89%) contrast(91%);
+}
+
+.btn_timer_pause:after {
+    content: '⏸';
+    cursor: pointer;
+}
+
+.all_time {
+    font-size: 10px;
 }
